[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/Multiplayer.gd" type="Script" id=1]

[sub_resource type="AudioStreamMicrophone" id=1]

[node name="Main" type="Spatial"]
script = ExtResource( 1 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 4.95659, 0 )

[node name="Microphone" type="AudioStreamPlayer" parent="."]
stream = SubResource( 1 )
autoplay = true
bus = "Capture"

[node name="Login" type="Node" parent="."]

[node name="Button" type="Button" parent="Login"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
rect_pivot_offset = Vector2( 0.5, 0.5 )
text = "Conectar"
icon_align = 1

[node name="LineEdit" type="LineEdit" parent="Login"]
margin_left = 473.0
margin_top = 258.0
margin_right = 616.0
margin_bottom = 282.0
align = 1

[node name="Button2" type="Button" parent="Login"]
margin_left = 11.0
margin_top = 11.0
margin_right = 107.0
margin_bottom = 31.0
text = "create server"

[node name="Room" type="Node" parent="."]

[node name="PanelContainer" type="PanelContainer" parent="Room"]
margin_left = 39.0
margin_top = 105.0
margin_right = 412.0
margin_bottom = 479.0

[node name="VBoxContainer" type="VBoxContainer" parent="Room/PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 366.0
margin_bottom = 7.0
size_flags_vertical = 0

[node name="Mute" type="Button" parent="Room"]
margin_left = 77.0
margin_top = 513.0
margin_right = 89.0
margin_bottom = 533.0
text = "toggle mute"

[connection signal="pressed" from="Login/Button" to="." method="create_client"]
[connection signal="pressed" from="Login/Button2" to="." method="create_server"]
[connection signal="pressed" from="Room/Mute" to="." method="toggle_mute"]
